force-app/main/default/objects/Tank__c/Tank__c.object-meta.xml
<CustomObject>
    <label>Tank</label>
    <nameField>
        <label>Tank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tanks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>