force-app/main/default/objects/Tank__c/fields/Active_Tank__c.field-meta.xml
<CustomField>
    <fullName>Active_Tank__c</fullName>
    <label>Active Tank</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>