force-app/main/default/objects/Tank__c/fields/Capacity_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Gallons__c</fullName>
    <label>Tank Capacity (Gallons)</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>