force-app/main/default/objects/Tank__c/fields/Current_Level_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Current_Level_Gallons__c</fullName>
    <label>Current Level (Gallons)</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>