force-app/main/default/objects/Tank__c/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
                <default>true</default>
                <label>Diesel</label>
            </value>
            <value>
                <fullName>Heating_Oil</fullName>
                <label>Heating Oil</label>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>Kerosene</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>