force-app/main/default/objects/Tank__c/fields/Has_IoT_Device__c.field-meta.xml
<CustomField>
    <fullName>Has_IoT_Device__c</fullName>
    <label>Has IoT Device</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>