force-app/main/default/objects/Tank__c/fields/IoT_Device_ID__c.field-meta.xml
<CustomField>
    <fullName>IoT_Device_ID__c</fullName>
    <label>IoT Device ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>