force-app/main/default/objects/Tank__c/fields/Last_IoT_Reading__c.field-meta.xml
<CustomField>
    <fullName>Last_IoT_Reading__c</fullName>
    <label>Last IoT Reading</label>
    <type>DateTime</type>
</CustomField>