force-app/main/default/objects/Tank__c/fields/Low_Level_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Low_Level_Threshold__c</fullName>
    <label>Low Level Threshold (Gallons)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>