force-app/main/default/objects/Tank__c/fields/Tank_Access_Hours__c.field-meta.xml
<CustomField>
    <fullName>Tank_Access_Hours__c</fullName>
    <label>Tank Access Hours</label>
    <length>100</length>
    <type>Text</type>
</CustomField>