force-app/main/default/objects/Tank__c/fields/Tank_Access_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Tank_Access_Instructions__c</fullName>
    <label>Tank Access Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>