force-app/main/default/objects/Tank__c/fields/Tank_Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Tank_Is_Locked__c</fullName>
    <label>Tank Is Locked</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>